kubernetes/apps/kubeflow/auth/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kubeflow
  namespace: kubeflow
spec:
  oidc:
    clientID: kubeflow
    clientSecret:
      name: kubeflow-kanidm-oauth2-credentials
    cookieNames:
      accessToken: kubeflow-access-token
      idToken: kubeflow-id-token
    disableTokenEncryption: true
    forwardAccessToken: true
    logoutPath: /logout
    provider:
      issuer: https://id.goyangi.io/oauth2/openid/kubeflow
    redirectURL: https://kubeflow.goyangi.io/oauth2/callback
    refreshToken: true
    scopes:
      - openid
      - profile
      - email
  jwt:
    providers:
      - name: kanidm
        issuer: https://id.goyangi.io/oauth2/openid/kubeflow
        audiences:
          - kubeflow
        remoteJWKS:
          uri: https://id.goyangi.io/oauth2/openid/kubeflow/public_key.jwk
        claimToHeaders:
          - claim: email
            header: X-Remote-User
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: central-dashboard
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: katib
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: notebooks
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pipelines
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: profiles
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tensorboard
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: volumes-web-app
